recursion.logo.tree.Tree.scala.error
Compilation error:
Tree:3: error: reassignment to val
    length=0
          ^